# Worms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configuracion.yml  install.sh
box2d/: Makefile  cmake_install.cmake
box2d/src/: Makefile  cmake_install.cmake
box2d/testbed/: Makefile  cmake_install.cmake
box2d/unit-test/: Makefile  cmake_install.cmake
client/: client.cpp  client.h  client_cliente.cpp  client_cliente.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_protocolo.cpp  client_protocolo.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  main.cpp
client/vista/: animacion.cpp  animacion.h  animacion_apuntado.cpp  animacion_apuntado.h  animacion_explosion.cpp  animacion_explosion.h  animacion_mira.cpp  animacion_mira.h  animacion_potencia.cpp  animacion_potencia.h  animacion_worm.cpp  animacion_worm.h  camara.cpp  camara.h  client_animacion.cpp  client_animacion.h  client_apuntado.cpp  client_apuntado.h  client_arma.cpp  client_arma.h  client_camara.cpp  client_camara.h  client_explosion.cpp  client_explosion.h  client_finalizar.cpp  client_granada.cpp  client_granada.h  client_menu.cpp  client_menu.h  client_menu_armas.cpp  client_menu_armas.h  client_mira.cpp  client_mira.h  client_partida.cpp  client_partida.h  client_partida_vista.cpp  client_partida_vista.h  client_potencia.cpp  client_potencia.h  client_proyectil.cpp  (+31 more)
client/vista/armas/: animacion_arma.cpp  animacion_arma.h  animacion_ataque_aereo.cpp  animacion_ataque_aereo.h  animacion_banana.cpp  animacion_banana.h  animacion_bate.cpp  animacion_bate.h  animacion_bazooka.cpp  animacion_bazooka.h  animacion_dinamita.cpp  animacion_dinamita.h  animacion_fragmento.cpp  animacion_fragmento.h  animacion_granada_roja.cpp  animacion_granada_roja.h  animacion_granada_santa.cpp  animacion_granada_santa.h  animacion_granada_verde.cpp  animacion_granada_verde.h  animacion_humo.cpp  animacion_humo.h  animacion_misil.cpp  animacion_misil.h  animacion_mortero.cpp  animacion_mortero.h  vista_arma.cpp  vista_arma.h  vista_ataque_aereo.cpp  vista_ataque_aereo.h  vista_banana.cpp  vista_banana.h  vista_bate.cpp  vista_bate.h  vista_bazooka.cpp  vista_bazooka.h  vista_dinamita.cpp  vista_dinamita.h  vista_fragmento.cpp  vista_fragmento.h  (+10 more)
client/vista/menu/: client_finalizar.h  client_menu.h  menu_crear_partida.cpp  menu_crear_partida.ui  menu_finalizar.cpp  menu_finalizar.h  menu_finalizar.ui  menu_partidas.cpp  menu_partidas.ui  menu_principal.cpp  menu_principal.h  menu_principal.ui
common/: blockingqueue.cpp  blockingqueue.h  broadcaster.cpp  broadcaster.h  common_queue.h  common_socket.cpp  common_thread.h  common_wrap_socket.cpp  constantes.h  dto.cpp  dto.h  liberror.cpp  liberror.h  queue.h  receiver_thread.cpp  resolver.cpp  resolver.h  resolvererror.cpp  sender_thread.cpp  server_monitor_outgoing_queues.cpp  server_monitor_outgoing_queues.h  socket.cpp  socket.h  socket_interface.h  socket_mock.cpp  socket_mock.h  thread.h
common/Dtos/: ataque_aereo.cpp  ataque_aereo.h  batear.cpp  batear.h  bazuka.cpp  bazuka.h  cheats.cpp  cheats.h  cliente_id.cpp  cliente_id.h  dead.cpp  dead.h  dinamita.cpp  dinamita.h  dto.cpp  dto.h  equipar_arma.cpp  equipar_arma.h  fragmento.cpp  fragmento.h  ganador.cpp  ganador.h  granada.cpp  granada.h  granada_banana.cpp  granada_banana.h  granada_roja.cpp  granada_roja.h  granada_santa.cpp  granada_santa.h  gusano.cpp  gusano.h  mortero.cpp  mortero.h  mover.cpp  mover.h  nueva_partida.cpp  nueva_partida.h  partidas_lista.cpp  partidas_lista.h  (+10 more)
documentacion/: diagrama_de_clases.wsd  documentacion_tecnica.md  manual_de_proyecto.md  manual_de_usuario.md  protocolo.md
documentacion/diagramas/: cliente.puml  diagrama_de_clases_2.puml  diagrama_de_clases_3.puml  general.puml  server.puml  vista.puml
documentacion/diagramas/clase/: server_game.puml
documentacion/diagramas/clase/vista/: armas.puml  granada_verde.puml  vista.puml
documentacion/diagramas/secuencia/: mover_worm_actualizacion.puml  mover_worm_handle_events.puml  mover_worm_renderizado.puml  partida.puml
gtest/: CMakeLists.txt  my_test.cpp
server/: aceptador.cpp  banana.cpp  banana.h  bazooka_rocket.cpp  bazooka_rocket.h  beam.cpp  beam.h  contact_listener.h  dynamite.cpp  dynamite.h  entity.h  game.cpp  game.h  green_grenade.cpp  green_grenade.h  holy_grenade.h  lobby.cpp  lobby.h  main.cpp  partida.cpp  partida.h  player.cpp  player.h  receiver_thread.cpp  receiver_thread.h  sender_thread.cpp  sender_thread.h  server.cpp  server.h  server_aceptador.cpp  server_aceptador.h  server_client.cpp  server_client.h  server_jugador.cpp  server_jugador.h  server_main.cpp  server_monitor_outgoing_queues.cpp  server_monitor_outgoing_queues.h  server_protocol.cpp  server_protocol.h  (+12 more)
server/fisicas/: air_strike_rocket.cpp  air_strike_rocket.h  banana.cpp  banana.h  bazooka_rocket.cpp  bazooka_rocket.h  beam.cpp  beam.h  contact_listener.h  dynamite.cpp  dynamite.h  entity.h  game.cpp  game.h  green_grenade.cpp  green_grenade.h  holy_grenade.cpp  holy_grenade.h  mortero_rocket.cpp  mortero_rocket.h  player.cpp  player.h  red_grenade.cpp  red_grenade.h  red_grenade_fragment.cpp  red_grenade_fragment.h  utils.cpp  utils.h  world.cpp  world.h  worm.cpp  worm.h
